tests/baselines/reference/blockScopedFunctionDeclarationInStrictModule.errors.txt
blockScopedFunctionDeclarationInStrictModule.ts(6,10): error TS2304: Cannot find name 'foo'.


==== blockScopedFunctionDeclarationInStrictModule.ts (1 errors) ====
    if (true) {
        function foo() { }
        foo(); // ok
    }
    
    export = foo; // not ok
             ~~~
!!! error TS2304: Cannot find name 'foo'.